# HypDB

./: README.md  package.json  pyproject.toml
HypDB/: __init__.py
HypDB/core/: MultipleTrreatmentTest.py  att_filtering.py  cov_selection.py  explanation.py  matching.py  query.py  simdetec.py
HypDB/modules/infotheo/: info_theo.py
HypDB/modules/kbutil/: statistics.py
HypDB/modules/pyrankagg/: metrics.py
HypDB/modules/pyrankagg/kbutil/: listutil.py  plotting.py  setup.py
HypDB/modules/statistics/: cit.py  contingancy_table.py
HypDB/utils/: _init__.py  random_query_generator.py  read_data.py  util.py
client/: package-lock.json  package.json  tsconfig.json
client/src/: index.html  styles.scss  tslint.json
client/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
client/src/app/services/: main.service.ts
demo/: README.md
demo/client/: README.md  angular.json  package-lock.json  package.json
demo/client/e2e/src/: app.e2e-spec.ts  app.po.ts
demo/client/src/: index.html  styles.scss  tslint.json
demo/server/: .gitignore  Pipfile
demo/server/resources/: Bias.py  BiasAte.py  UploadCsvJson.py
hypdb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: .gitignore  Pipfile  app.py  env.sh
server/middlewares/: cors.py
server/resources/: Bias.py  BiasAte.py  CsvJsonUploadListResource.py  DownloadCsvJson.py  UploadCsvJson.py  bias.py  test.py
server/resources/FairDB/core/: cov_selection.py  explanation.py  matching.py  query.py  test.sql
server/resources/data/: binadult.csv
(+53 files in other folders)
